# vibe-code-bench

./: .cursorrules  .gitignore  ESSENTIAL_TOOLS_SETUP.md  ORCHESTRATOR_README.md  README.md  REPORT_GENERATION_ENHANCEMENT.md  SETUP_INSTRUCTIONS.md  activate_env.ps1  codebase_analysis.md  config.py  example_agents.py  example_usage.py  example_web_security.py  install_tools.py  orchestrator.py  organize_reports.py  pyproject.toml  pytest.ini  red_team_agent.py  red_team_report.md  red_team_tool_integrations.py  red_team_tools.md  red_team_tools.py  requirements.txt  test_browse.py
.cursor/: .gitignore  README.mdc  decision_log.mdc  memory_bank.mdc  pattern_library.mdc  project_context.mdc  riper.mdc  start.mdc  state.mdc  technical_debt.mdc
.cursor/plans/: red_team_agent_from_browsing_report_ae1b5dcb.plan.md
.cursor/rules/: README.md  core.md
core/: __init__.py  llm_setup.py  logging_setup.py  report_generator.py  run_directory.py  test_runner.py
docs/: AGENTS.md  ORCHESTRATOR_README.md  PATH_MANAGEMENT.md
eval/: test_results.json
installations/: install_tools.sh
mini/: mini_red_team_agent.py  mini_tools.py  red_team_prompt.py  report_generator.py  report_structure.md  test_mini_agent.py
mini/reports/: run_report_20251202_154832.md  run_report_20251202_155017.md  run_report_20251202_155125.md  run_report_20251202_155155.md  (+21 more)
orchestrator/: __init__.py  state.py  supervisor.py
red_team_agent/: agent_common.py  red_team_agent.py  report_generator.py
reports/: run_report_20251202_172131.md  run_report_20251202_172618.md  run_report_20251203_155110.md
scripts/: setup_venv.ps1  test_anchor_integration.py  test_browse.py  test_form_detection.py  test_red_team.py
tests/: README.md  __init__.py  conftest.py  test_example_agents.py  test_integration.py  test_orchestrator.py  test_red_team_agent.py  test_red_team_eval.py  test_setup.py  test_website_builder_eval.py
tools/: __init__.py  ad_tools.py  advanced_tools.py  api_tools.py  cloud_tools.py  directory_tools.py  essential_tools.py  exploitation_tools.py  fuzzing_tools.py  network_tools.py  password_tools.py  post_exploit_tools.py  recon_tools.py  tool_factory.py  tool_loader.py  utility_tools.py  web_app_tools.py
website_generator/: agent.py  batch_runner.py  main.py  prompts.py
(+223 files in other folders)
